Jump to Top button fixed at bottom right (hidden for now until design is fixed)

--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -6,6 +6,14 @@ body {
     background-image: url("/static/images/whitey.png");
 }
 
+#jump-top {
+	position: fixed;
+	right: 10px;
+	bottom: 10px;
+	margin: 0;
+	cursor: pointer;
+}
+
 #content-container {
 	margin-left: 0;
 }
